--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ glob = "0.3.0"
 reqwest = { version="0.11.4", features=["blocking", "json"]}
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
+structopt = "0.3.22"
