--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.42"
+colored = "2.0.0"
 glob = "0.3.0"
 reqwest = { version="0.11.4", features=["blocking", "json"]}
 serde = { version = "1.0", features = ["derive"] }
